[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dm-cli"
dynamic = ["version"]
description = "CLI tool for working with Data Modelling Storage Service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.5",
    "emoji>=2.15.0",
    "tqdm>=4.67.3",
    "frozendict>=2.4.7",
    "typing_extensions>=4.15.0",
    "typer[all]>=0.24.1",
    "python-dateutil>=2.9.0.post0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[project.scripts]
dm = "dm_cli.cli:app"

[project.urls]
Homepage = "https://github.com/equinor/dm-cli"
Repository = "https://github.com/equinor/dm-cli"

[tool.hatch.version]
path = "dm_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dm_cli"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
